...
                    .frame(width: UIScreen.main.bounds.width, height: 290)
                    .scaledToFill()
                
                //Explore Now Btn
                Button {}
                label: {
                    Text("EXPLORE NOW")
                        .customFont(.bold, size: 14)
                        .foregroundStyle(.customOrange)
                        .padding()
                        .background(
                            Color.white.cornerRadius(7)
                        )
...
                
            }
            .lineLimit(2)
            
            Divider()
            
            //Description
            VStack(alignment: .leading, spacing: 4) {
                Text("Description")
                    .customFont(.bold, size: 22)
                
                let description = viewModel.experience?.description ?? ""
                Text(description.isEmpty ? "Description is not available. 😔" : description)
...
