...
}

// MARK: - Components
extension HomeScreen {
    private var header: some View {
        VStack(alignment: .leading) {
            Text("Welcome!")
                .customFont(.boldRounded, size: 22)
            Text("Now you can explore any experience in 360 degrees and get all the details about it all in one place.")
                .customFont(.medium, size: 14)
        }
        .foregroundStyle(.black)
    }
...
